# sandbox

./: .flake8  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
djangopro/: manage.py
djangopro/core/utils/: collections.py  misc.py  settings.py
djangopro/project/settings/: __init__.py  base.py  custom.py  envvars.py  logging.py
djangopro/project/settings/templates/: settings.dev.py
